FileManager - Fix widget height and context menu text item align (#8014)

--- a/styles/widgets/common/fileManager.less
+++ b/styles/widgets/common/fileManager.less
@@ -1,4 +1,6 @@
 .dx-filemanager {
+    height: 500px;
+
     display: flex;
     flex-direction: column;
     border: 1px solid;
