--- a/styles/widgets/material/fileManager.material.less
+++ b/styles/widgets/material/fileManager.material.less
@@ -153,3 +153,7 @@
          }
     }
 }
+
+.dx-filemanager-context-menu .dx-menu-item-has-text:not(.dx-menu-item-has-icon) .dx-menu-item-text {
+    margin-left: @FILEMANAGER_CONTEXTMENU_TEXT_ITEM_LEFT_MARGIN;
+}
